--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2786,7 +2786,10 @@
     <string name="kernel_version">Kernel version</string>
     <!-- About phone screen,  setting option name  [CHAR LIMIT=40] -->
     <string name="build_number">Build number</string>
-
+    <!-- About phone screen,  setting option name  [CHAR LIMIT=40] -->
+    <string name="build_user">Build user</string>
+    <!-- About phone screen,  setting option name  [CHAR LIMIT=40] -->
+    <string name="build_username">unknown</string>
     <!-- About phone screen, show when a value of some status item is unavailable. -->
     <string name="device_info_not_available">Not available</string>
     <!-- About phone screen, phone status screen title -->
